--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="60dp"
+        android:id="@+id/face"
         android:src="@drawable/ic_baseline_person_24" />
 
     <TextView
@@ -36,15 +37,15 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
             android:layout_gravity="center_vertical"
-            android:text="닉네임 설정  "/>
+            android:text="닉네임 설정"/>
 
         <EditText
             android:id="@+id/nickname"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
             android:layout_gravity="center_vertical"
-            android:ems="10" />
+            android:ems="9" />
 
         <Button
             android:id="@+id/changebtn"
