--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:textStyle="bold"
+        android:textStyle="italic|bold"
         android:layout_gravity="center"
         android:id="@+id/sampleSentence"
         android:layout_marginBottom="70dp"
